kubernetes/apps/default/n8n/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n
spec:
  hostnames: ["n8n.astrateam.net"]
  parentRefs:
    - name: external
      namespace: network
      sectionName: https
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: n8n
          namespace: default
          port: 5678
